--- a/PdfScribe/Properties/Resources.resx
+++ b/PdfScribe/Properties/Resources.resx
@@ -176,7 +176,7 @@
     <value>..\Resources\PrintCapture.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ProductCaption" xml:space="preserve">
-    <value>Aivika Printer</value>
+    <value>Aivika Virtual Printer</value>
   </data>
   <data name="SetOutputFilename" xml:space="preserve">
     <value>Set output filename</value>
