--- a/PdfScribeInstallCustomAction/Properties/Resources.resx
+++ b/PdfScribeInstallCustomAction/Properties/Resources.resx
@@ -208,13 +208,13 @@
     <value>Could not delete port configuration from registry. Exception message: {0}</value>
   </data>
   <data name="VirtualPrinterAddFailed" xml:space="preserve">
-    <value>Could not add Aivika virtual printer.</value>
+    <value>Could not add Aivika Virtual Printer.</value>
   </data>
   <data name="VirtualPrinterDeleteFailed" xml:space="preserve">
-    <value>Could not delete Aivika virtual printer.</value>
+    <value>Could not delete Aivika Virtual Printer.</value>
   </data>
   <data name="VirtualPrinterInstalled" xml:space="preserve">
-    <value>Virtual printer installed.</value>
+    <value>Aivika Virtual Printer installed.</value>
   </data>
   <data name="Win32Error" xml:space="preserve">
     <value>Win32 error code {0}.</value>
